scss/partials/_whats_new_modal.scss
div.whats-new-modal-container {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0px;
  left: 0px;
  background-color: $carrot_modal_bg;
  z-index: #{$navbar_zindex + 110};
  transition: opacity 180ms ease-in;
  overflow: auto;

  &.will-appear {
    opacity: 0;
  }

  &.appear {
    opacity: 1;
  }

  div.modal-wrapper {
    width: #{700 + 20 + 8}px;
    margin: 0px auto;
    min-height: 100vh;
    position: relative;

    button.carrot-modal-close {
      position: fixed;
      left: 50%;
      margin-left: -378px;
    }

    div.whats-new-modal {
      width: 700px;
      margin: 0px 0px 0px 28px;
      position: relative;
      overflow: hidden;
      background-color: $oc_gray_8;
      box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.05);
      padding: 24px;
      text-align: center;
      background-image: cdnUrl("/img/ML/about_carrot_modal_top_bg.svg");
      background-repeat: no-repeat;
      background-size: 837px 163px;
      background-position: -40px 0px;
      text-align: center;
      border-radius: 4px;

      div.carrot-logo {
        position: relative;
        background-image: cdnUrl("/img/ML/carrot_logo.svg");
        width: 82px;
        height: 82px;
        background-repeat: no-repeat;
        background-size: 52px 82px;
        background-position: center;
        margin: 0px auto;
      }

      a.about-link {
        @include avenir_H();
        font-size: 28px;
        color: $carrot_dark_blue;

        &:hover {
          text-decoration: underline;
        }
      }

      div.about-title {
        @include avenir_H();
        font-size: 28px;
        color: $carrot_dark_blue;
        margin-top: 32px;
      }

      div.about-links {
        display: inline-block;
        margin-top: 32px;

        a.about-link {
          @include avenir_H();
          font-size: 12px;
          color: rgba(#515151, 0.6);
          margin-right: 24px;

          &:hover {
            text-decoration: underline;
          }

          &.twitter {
            display: inline-block;
            width: 16px;
            height: 14px;
            background-image: cdnUrl("/img/ML/about_twitter.png");
            background-size: 16px 14px;
            background-repeat: no-repeat;
          }

          &.medium {
            display: inline-block;
            width: 14px;
            height: 14px;
            background-image: cdnUrl("/img/ML/about_medium.png");
            background-size: 14px;
            background-repeat: no-repeat;
          }
        }
      }

      div.news-list-container {
        margin-top: 32px;
        overflow: auto;
        width: calc(100% + 48px);
        margin-left: -24px;
        padding: 0px 24px;

        div.news-list {
          border-radius: 5px;
          background-color: white;
          margin-bottom: 32px;

          div.news {
            padding: 32px 24px;
            text-align: left;

            &:not(:last-child) {
              margin-bottom: 1px solid rgba($carrot_light_gray_1, 0.3);
            }

            div.news-date {
              @include avenir_R();
              font-size: 14px;
              color: rgba($oc_gray_7, 0.5)
            }

            div.news-headline {
              @include avenir_H();
              font-size: 20px;
              color: $carrot_dark_gray;
              margin-top: 16px;
              display: block;
              @include activity-headline();
            }

            div.news-body {
              @include avenir_R();
              font-size: 16px;
              color: $carrot_dark_gray;
              margin-top: 16px;
              @include activity-body();
            }
          }
        }
      }
    }
  }
}

